feat(repo-metrics): add file type repo metrics route and chart
