# Codigo/supportplatform-web/src/commom/service/api/file.ts
@@ -1,4 +1,4 @@
-import { FileChangeMetricsDTO } from "@gitgrade/dtos";
+import { FileChangeMetricsDTO, FileTypeMetricsDTO } from "@gitgrade/dtos";
 import api from "../config/api";
 
 export default class FileService {
@@ -17,6 +17,24 @@ export default class FileService {
 
         return api.get<FileChangeMetricsDTO>(
             `repository/${repositoryId}/metric/changes?${searchParams.toString()}`
+        );
+    }
+
+    async getFileTypeMetricsGroupedByContributorByRepositoryIdQuery(
+        repositoryId: number,
+        query?: {
+            branchName?: string;
+            startedAt?: string;
+            endedAt?: string;
+        }
+    ) {
+        const searchParams = new URLSearchParams();
+        if (query?.branchName) searchParams.set("branchName", query.branchName);
+        if (query?.startedAt) searchParams.set("startedAt", query.startedAt);
+        if (query?.endedAt) searchParams.set("endedAt", query.endedAt);
+
+        return api.get<FileTypeMetricsDTO>(
+            `repository/${repositoryId}/metric/fileTypes?${searchParams.toString()}`
         );
     }
 }
